# my-angular-bazel-demo

./: BUILD.bazel  README.md  angular.json.bak  package-lock.json  package.json
src/: BUILD.bazel
src/app/: BUILD.bazel  app.component.html  app.module.ts
src/app/module-a/: BUILD.bazel  module-a.module.ts
src/app/module-a/components/head-component/: head-component.component.html
src/app/module-b/: BUILD.bazel  module-b.module.ts
src/app/module-b/components/footer/: footer.component.html
src/app/module-c/: module-c.module.ts
