load("@npm_angular_bazel//:index.bzl", "ng_module")

package(default_visibility = ["//:__subpackages__"])

ng_module(
    name = "module-b",
    srcs = glob(["**/*.ts"]),
    assets = glob(include = [
        "**/*.html",
        "**/*.css"
    ]),
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@angular/router",
    ],
)
